--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,27 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+    /* transform: rotate(0deg); 
+    transform: rotate(0deg) translateY(-10%);
   }
   to {
-    transform: rotate(360deg);
+    /* transform: rotate(360deg); 
+    transform: rotate(360deg) translateY(10%);
+  }
+} 
+*/
+
+@keyframes App-logo-spin {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
 
