styling the homepage, changed fonts, select css
Co-authored-by: Barbara <77367593+0bubbles0@users.noreply.github.com>

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,18 @@ button:hover {
   cursor: pointer;
 }
 
+h1 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 3rem;
+
+  margin-top: 15vh;
+}
+
+.description {
+  font-family: 'Rubik', sans-serif;
+  font-size: 1.5rem;
+}
+
 /* ----------------------------------------------------------------- PRIMITIVES ------------------------------------------------------------- */
 /* -----------------------------------------------------------------            ------------------------------------------------------------- */
 /* -----------------------------------------------------------------            ------------------------------------------------------------- */
