Conditional Profiles: depend on berry status
Co-authored-by: Elena Marinaki <elenamarinaki@users.noreply.github.com>

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -31,16 +31,16 @@
   /* display: none; */
   backface-visibility: hidden;
   z-index: 2;
-  /* position: absolute; */
+  position: absolute;
 }
 .card-b {
   /* display: none; */
   backface-visibility: hidden;
   z-index: 5;
   position: relative;
-  /* position: absolute; */
+  position: absolute;
   transform: rotateY(180deg);
-  /* margin: 80%; */
+  /* margin-top: -110%; */
 }
 
 .card-container.flipped {
