--- a/src/components/card.css
+++ b/src/components/card.css
@@ -64,7 +64,9 @@ img {
 
 .flip-btn {
   font-family: 'Pacifico', cursive;
-
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 1rem;
 
   border: 1px solid rgb(170, 16, 88);
