--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,23 @@ h1 {
   font-size: 1.5rem;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.instructions {
+  font-size: 1rem;
+  width: 70%;
+
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+
+  border: 2px solid rgb(29, 29, 27);
+  border-bottom: 3px solid rgb(29, 29, 27);
+  border-radius: 12px;
+  box-shadow: 6px 7px 6px rgba(79, 25, 187, 0.5);
+}
+
 /* ----------------------------------------------------------------- PRIMITIVES ------------------------------------------------------------- */
 /* -----------------------------------------------------------------            ------------------------------------------------------------- */
 /* -----------------------------------------------------------------            ------------------------------------------------------------- */
